# COED

1/code/: main.py  pyproject.toml  report.doc
2/code/: main.py  report.doc
2/task/: исходные_данные_для_лаб.xls
3/code/: data.xls  main.py  pyproject.toml  report.doc
